TypeInfo and Builder Refinements (#6729)
Prereq changes to prepare for pico-anno-processor. This change enhances TypeInfo, TypedElementName, etc. It also introduces builder-testing.