@@ -21,11 +21,14 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import javax.annotation.processing.ProcessingEnvironment;
@@ -35,6 +38,7 @@ import javax.lang.model.element.Element;
 import javax.lang.model.element.ElementKind;
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.element.Modifier;
+import javax.lang.model.element.ModuleElement;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.element.VariableElement;
 import javax.lang.model.type.ArrayType;
@@ -43,6 +47,7 @@ import javax.lang.model.type.TypeKind;
 import javax.lang.model.type.TypeMirror;
 import javax.lang.model.util.Elements;
 import javax.tools.Diagnostic;
+import javax.tools.JavaFileObject;
 
 import io.helidon.builder.processor.spi.TypeInfoCreatorProvider;
 import io.helidon.common.Weight;
@@ -56,7 +61,14 @@ import io.helidon.common.types.TypeNameDefault;
 import io.helidon.common.types.TypedElementName;
 import io.helidon.common.types.TypedElementNameDefault;
 
+// this is really ok!
+import com.sun.source.util.TreePath;
+import com.sun.source.util.Trees;
+
 import static io.helidon.builder.processor.tools.BeanUtils.isBuiltInJavaType;
+import static io.helidon.common.types.TypeNameDefault.create;
+import static io.helidon.common.types.TypeNameDefault.createFromGenericDeclaration;
+import static io.helidon.common.types.TypeNameDefault.createFromTypeName;
 
 /**
  * The default implementation for {@link io.helidon.builder.processor.spi.TypeInfoCreatorProvider}. This also contains an abundance of
@@ -75,11 +87,11 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
 
     @Override
     @SuppressWarnings("unchecked")
-    public Optional<TypeInfo> createTypeInfo(TypeName annotationTypeName,
-                                             TypeName typeName,
-                                             TypeElement element,
-                                             ProcessingEnvironment processingEnv,
-                                             boolean wantDefaultMethods) {
+    public Optional<TypeInfo> createBuilderTypeInfo(TypeName annotationTypeName,
+                                                    TypeName typeName,
+                                                    TypeElement element,
+                                                    ProcessingEnvironment processingEnv,
+                                                    boolean wantDefaultMethods) {
         Objects.requireNonNull(annotationTypeName);
         if (typeName.name().equals(Annotation.class.getName())) {
             return Optional.empty();
@@ -90,7 +102,7 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
                 .map(ExecutableElement.class::cast)
                 .filter(it -> canAccept(it, wantDefaultMethods))
                 .filter(it -> !it.getParameters().isEmpty() || it.getReturnType().getKind() == TypeKind.VOID)
-                .collect(Collectors.toList());
+                .toList();
         if (!problems.isEmpty()) {
             String msg = "Only simple getters with no arguments are supported: " + element + ": " + problems;
             processingEnv.getMessager().printMessage(Diagnostic.Kind.ERROR, msg);
@@ -99,8 +111,7 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
 
         Collection<TypedElementName> elementInfo = toElementInfo(element, processingEnv, true, wantDefaultMethods);
         Collection<TypedElementName> otherElementInfo = toElementInfo(element, processingEnv, false, wantDefaultMethods);
-        Set<String> modifierNames = element.getModifiers().stream()
-                .map(Modifier::toString)
+        Set<String> modifierNames = toModifierNames(element.getModifiers()).stream()
                 .map(String::toUpperCase)
                 .collect(Collectors.toSet());
         return Optional.of(TypeInfoDefault.builder()
@@ -114,9 +125,54 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
                                            toReferencedTypeNamesAndAnnotations(
                                                    processingEnv, typeName, elementInfo, otherElementInfo))
                                    .modifierNames(modifierNames)
-                                   .update(it -> toTypeInfo(annotationTypeName, element, processingEnv, wantDefaultMethods)
+                                   .update(it -> toBuilderTypeInfo(annotationTypeName, element, processingEnv, wantDefaultMethods)
                                            .ifPresent(it::superTypeInfo))
                                    .build());
+    }
+
+    @Override
+    public Optional<TypeInfo> createTypeInfo(TypeElement element,
+                                             TypeMirror mirror,
+                                             ProcessingEnvironment processingEnv,
+                                             Predicate<TypedElementName> isOneWeCareAbout) {
+        return toTypeInfo(element, mirror, processingEnv, isOneWeCareAbout);
+    }
+
+    /**
+     * Converts the provided modifiers to the corresponding set of modifier names.
+     *
+     * @param modifiers the modifiers
+     * @return the modifier names
+     */
+    static Set<String> toModifierNames(Set<javax.lang.model.element.Modifier> modifiers) {
+        return modifiers.stream()
+                .map(javax.lang.model.element.Modifier::name)
+                .collect(Collectors.toSet());
+    }
+
+    /**
+     * Returns the map of meta annotations for the provided collection of annotation values.
+     *
+     * @param annotations the annotations
+     * @return the meta annotations for the provided set of annotations
+     */
+    static Map<TypeName, List<AnnotationAndValue>> toMetaAnnotations(Collection<AnnotationAndValue> annotations,
+                                                                     ProcessingEnvironment processingEnv) {
+        if (annotations.isEmpty()) {
+            return Map.of();
+        }
+
+        Elements elements = processingEnv.getElementUtils();
+        Map<TypeName, List<AnnotationAndValue>> result = new LinkedHashMap<>();
+        annotations.stream()
+                .filter(it -> !result.containsKey(it.typeName()))
+                .forEach(it -> {
+                    TypeElement typeElement = elements.getTypeElement(it.typeName().name());
+                    if (typeElement != null) {
+                        result.put(it.typeName(), new ArrayList<>(createAnnotationAndValueSet(typeElement)));
+                    }
+                });
+        return result;
     }
 
     @SuppressWarnings("unchecked")
@@ -160,15 +216,17 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
      * @param wantDefaultMethods    true to process {@code default} methods
      * @return the collection of typed elements
      */
-    protected Collection<TypedElementName> toElementInfo(TypeElement element,
-                                                         ProcessingEnvironment processingEnv,
-                                                         boolean wantWhatWeCanAccept,
-                                                         boolean wantDefaultMethods) {
+    private Collection<TypedElementName> toElementInfo(TypeElement element,
+                                                       ProcessingEnvironment processingEnv,
+                                                       boolean wantWhatWeCanAccept,
+                                                       boolean wantDefaultMethods) {
         return element.getEnclosedElements().stream()
                 .filter(it -> it.getKind() == ElementKind.METHOD)
                 .map(ExecutableElement.class::cast)
                 .filter(it -> (wantWhatWeCanAccept == canAccept(it, wantDefaultMethods)))
                 .map(it -> createTypedElementNameFromElement(it, processingEnv.getElementUtils()))
+                .filter(Optional::isPresent)
+                .map(Optional::get)
                 .collect(Collectors.toList());
     }
 
@@ -180,8 +238,8 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
      * @param defineDefaultMethods true if we should also process default methods
      * @return true if not able to accept
      */
-    protected boolean canAccept(ExecutableElement ee,
-                                boolean defineDefaultMethods) {
+    private boolean canAccept(ExecutableElement ee,
+                              boolean defineDefaultMethods) {
         Set<Modifier> mods = ee.getModifiers();
         if (mods.contains(Modifier.ABSTRACT)) {
             return true;
@@ -196,10 +254,10 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
         return false;
     }
 
-    private Optional<TypeInfo> toTypeInfo(TypeName annotationTypeName,
-                                          TypeElement element,
-                                          ProcessingEnvironment processingEnv,
-                                          boolean wantDefaultMethods) {
+    private Optional<TypeInfo> toBuilderTypeInfo(TypeName annotationTypeName,
+                                                 TypeElement element,
+                                                 ProcessingEnvironment processingEnv,
+                                                 boolean wantDefaultMethods) {
         List<? extends TypeMirror> ifaces = element.getInterfaces();
         if (ifaces.size() > 1) {
             processingEnv.getMessager()
@@ -213,11 +271,185 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
             return Optional.empty();
         }
 
-        return createTypeInfo(annotationTypeName,
-                              createTypeNameFromElement(parent.orElseThrow()).orElseThrow(),
-                              parent.orElseThrow(),
-                              processingEnv,
-                              wantDefaultMethods);
+        return createBuilderTypeInfo(annotationTypeName,
+                                     createTypeNameFromElement(parent.orElseThrow()).orElseThrow(),
+                                     parent.orElseThrow(),
+                                     processingEnv,
+                                     wantDefaultMethods);
+    }
+
+    /**
+     * Generally callers should instead use {@link #createTypeInfo(TypeElement, TypeMirror, ProcessingEnvironment, Predicate)}
+     * instead of this static method since that method will usage of the pluggable replacement to create a specialized
+     * {@link TypeInfo} through the SPI service loader extensibility. This method can be used, however, if the built-in creator
+     * is sufficient for the caller's needs.
+     *
+     * @param element           the element that is being processed
+     * @param mirror            the type mirror for the element being processed
+     * @param processingEnv     the processing environment
+     * @param isOneWeCareAbout  the predicate filter to determine whether the element is of interest, and therefore should be
+     *                          included in {@link TypeInfo#elementInfo()}. Otherwise, if the predicate indicates it is not of
+     *                          interest then the method will be placed under {@link TypeInfo#otherElementInfo()} instead
+     * @return the type info associated with the arguments being processed, or empty if not able to process the type
+     */
+    static Optional<TypeInfo> toTypeInfo(TypeElement element,
+                                         TypeMirror mirror,
+                                         ProcessingEnvironment processingEnv,
+                                         Predicate<TypedElementName> isOneWeCareAbout) {
+        TypeName fqTypeName = createTypeNameFromMirror(mirror).orElseThrow();
+        if (fqTypeName.name().equals(Object.class.getName())) {
+            return Optional.empty();
+        }
+
+        TypeName genericTypeName = fqTypeName.genericTypeName();
+        Set<TypeName> allInterestingTypeNames = new LinkedHashSet<>();
+        allInterestingTypeNames.add(genericTypeName);
+        fqTypeName.typeArguments()
+                .stream()
+                .map(TypeName::genericTypeName)
+                .filter(it -> !isBuiltInJavaType(it))
+                .filter(it -> !it.generic())
+                .forEach(allInterestingTypeNames::add);
+
+        Elements elementUtils = processingEnv.getElementUtils();
+        try {
+            Set<AnnotationAndValue> annotations =
+                    createAnnotationAndValueSet(elementUtils.getTypeElement(genericTypeName.name()));
+            Map<TypeName, List<AnnotationAndValue>> referencedAnnotations = toMetaAnnotations(annotations, processingEnv);
+            List<TypedElementName> elementsWeCareAbout = new ArrayList<>();
+            List<TypedElementName> otherElements = new ArrayList<>();
+            element.getEnclosedElements().stream()
+                    .map(it -> createTypedElementNameFromElement(it, elementUtils))
+                    .filter(Optional::isPresent)
+                    .map(Optional::get)
+                    .forEach(it -> {
+                        if (isOneWeCareAbout.test(it)) {
+                            elementsWeCareAbout.add(it);
+                        } else {
+                            otherElements.add(it);
+                        }
+                    });
+            TypeInfoDefault.Builder builder = TypeInfoDefault.builder()
+                    .typeName(fqTypeName)
+                    .typeKind(String.valueOf(element.getKind()))
+                    .annotations(annotations)
+                    .referencedTypeNamesToAnnotations(referencedAnnotations)
+                    .modifierNames(toModifierNames(element.getModifiers()))
+                    .elementInfo(elementsWeCareAbout)
+                    .otherElementInfo(otherElements);
+
+            // add all of the element's and parameters to the references annotation set
+            elementsWeCareAbout.forEach(it -> {
+                if (!isBuiltInJavaType(it.typeName()) && !it.typeName().generic()) {
+                    allInterestingTypeNames.add(it.typeName().genericTypeName());
+                }
+                List<AnnotationAndValue> annos = it.annotations();
+                Map<TypeName, List<AnnotationAndValue>> resolved = toMetaAnnotations(annos, processingEnv);
+                resolved.forEach(builder::addReferencedTypeNamesToAnnotations);
+                resolved.keySet().stream()
+                        .map(TypeName::genericTypeName)
+                        .filter(t -> !isBuiltInJavaType(t))
+                        .filter(t -> !t.generic())
+                        .forEach(allInterestingTypeNames::add);
+                it.parameterArguments().stream()
+                        .map(TypedElementName::typeName)
+                        .map(TypeName::genericTypeName)
+                        .filter(t -> !isBuiltInJavaType(t))
+                        .filter(t -> !t.generic())
+                        .forEach(allInterestingTypeNames::add);
+            });
+
+            TypeMirror superTypeMirror = element.getSuperclass();
+            TypeName fqSuperTypeName = createTypeNameFromMirror(superTypeMirror).orElse(null);
+            if (fqSuperTypeName != null && !fqSuperTypeName.name().equals(Object.class.getName())) {
+                TypeElement superTypeElement = elementUtils.getTypeElement(fqSuperTypeName.name());
+                if (superTypeElement != null) {
+                    TypeName genericSuperTypeName = fqSuperTypeName.genericTypeName();
+                    Optional<TypeInfo> superTypeInfo =
+                            toTypeInfo(superTypeElement, superTypeMirror, processingEnv, isOneWeCareAbout);
+                    superTypeInfo.ifPresent(builder::superTypeInfo);
+                    allInterestingTypeNames.add(genericSuperTypeName);
+                    fqSuperTypeName.typeArguments().stream()
+                            .map(TypeName::genericTypeName)
+                            .filter(it -> !isBuiltInJavaType(it))
+                            .filter(it -> !it.generic())
+                            .forEach(allInterestingTypeNames::add);
+                }
+            }
+
+            element.getInterfaces().forEach(interfaceTypeMirror -> {
+                TypeName fqInterfaceTypeName = createTypeNameFromMirror(interfaceTypeMirror).orElse(null);
+                if (fqInterfaceTypeName != null) {
+                    TypeName genericInterfaceTypeName = fqInterfaceTypeName.genericTypeName();
+                    allInterestingTypeNames.add(genericInterfaceTypeName);
+                    fqInterfaceTypeName.typeArguments().stream()
+                            .map(TypeName::genericTypeName)
+                            .filter(it -> !isBuiltInJavaType(it))
+                            .filter(it -> !it.generic())
+                            .forEach(allInterestingTypeNames::add);
+                    TypeElement interfaceTypeElement = elementUtils.getTypeElement(fqInterfaceTypeName.name());
+                    if (interfaceTypeElement != null) {
+                        Optional<TypeInfo> superTypeInfo =
+                                toTypeInfo(interfaceTypeElement, interfaceTypeMirror, processingEnv, isOneWeCareAbout);
+                        superTypeInfo.ifPresent(builder::addInterfaceTypeInfo);
+                    }
+                }
+            });
+
+            AtomicReference<String> moduleName = new AtomicReference<>();
+            allInterestingTypeNames.forEach(it -> {
+                TypeElement typeElement = elementUtils.getTypeElement(it.name());
+                if (typeElement == null || !isTypeInThisModule(typeElement, moduleName, processingEnv)) {
+                    if (hasValue(moduleName.get())) {
+                        builder.addReferencedModuleName(it, moduleName.get());
+                    }
+                }
+            });
+
+            return Optional.of(builder.build());
+        } catch (Exception e) {
+            throw new IllegalStateException("Failed to process: " + element, e);
+        }
+    }
+
+    /**
+     * Determines if the given type element is defined in the module being processed. If so then the return value is set to
+     * {@code true} and the moduleName is cleared out. If not then the return value is set to {@code false} and the
+     * {@code moduleName} is set to the module name if it has a qualified module name, and not from an internal java module system
+     * type. Note that this method will only return {@code true} when the module info paths are being used in the project.
+     *
+     * @param type          the type element to analyze
+     * @param moduleName    the module name to populate if it is determinable
+     * @param processingEnv the processing env
+     * @return true if the type is definitely defined in this module, false otherwise
+     */
+    public static boolean isTypeInThisModule(TypeElement type,
+                                      AtomicReference<String> moduleName,
+                                      ProcessingEnvironment processingEnv) {
+        moduleName.set(null);
+
+        ModuleElement module = processingEnv.getElementUtils().getModuleOf(type);
+        if (!module.isUnnamed()) {
+            String name = module.getQualifiedName().toString();
+            if (hasValue(name)) {
+                moduleName.set(name);
+            }
+        }
+
+        // if there is no module-info in use we need to try to find the type is in our source path and if
+        // not found then just assume it is external
+        try {
+            Trees trees = Trees.instance(processingEnv);
+            TreePath path = trees.getPath(type);
+            if (path == null) {
+                return false;
+            }
+            JavaFileObject sourceFile = path.getCompilationUnit().getSourceFile();
+            return (sourceFile != null);
+        } catch (Throwable t) {
+            // assumed external
+            return false;
+        }
     }
 
     /**
@@ -271,7 +503,7 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
 
         Element packageName = type.getEnclosingElement() == null ? type : type.getEnclosingElement();
 
-        return Optional.of(TypeNameDefault.create(packageName.toString(), className));
+        return Optional.of(create(packageName.toString(), className));
     }
 
     /**
@@ -313,15 +545,21 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
                 throw new IllegalStateException("Unknown primitive type: " + kind);
             }
 
-            return Optional.of(TypeNameDefault.create(type));
+            return Optional.of(create(type));
         }
 
-        if (TypeKind.VOID == kind) {
-            return Optional.of(TypeNameDefault.create(void.class));
-        } else if (TypeKind.TYPEVAR == kind) {
+        switch (kind) {
+        case VOID:
+            return Optional.of(create(void.class));
+        case TYPEVAR:
+            // note that we converge on renaming generics to wildcard (?) here intentionally
+            return Optional.of(createFromGenericDeclaration(/*typeMirror.toString()*/ "?"));
+        case WILDCARD:
+            return Optional.of(createFromTypeName(typeMirror.toString()));
+        case NONE:
             return Optional.empty();
-        } else if (TypeKind.WILDCARD == kind) {
-            return Optional.of(TypeNameDefault.createFromTypeName(typeMirror.toString()));
+        default:
+            // fall through
         }
 
         if (typeMirror instanceof ArrayType) {
@@ -394,6 +632,41 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
     }
 
     /**
+     * Creates a set of annotations based using annotation processor.
+     *
+     * @param type the enclosing/owing type element
+     * @return the annotation value set
+     */
+    public static Set<AnnotationAndValue> createAnnotationAndValueSet(Element type) {
+        return type.getAnnotationMirrors().stream()
+                .map(BuilderTypeTools::createAnnotationAndValue)
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+    }
+
+    /**
+     * Creates a set of annotations based using annotation processor.
+     *
+     * @param annoMirrors the annotation type mirrors
+     * @return the annotation value set
+     */
+    public static Set<AnnotationAndValue> createAnnotationAndValueSet(List<? extends AnnotationMirror> annoMirrors) {
+        return annoMirrors.stream()
+                .map(BuilderTypeTools::createAnnotationAndValue)
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+    }
+
+    /**
+     * Creates an annotation and value from introspection.
+     *
+     * @param annotationMirror the introspected annotation
+     * @return the annotation and value
+     */
+    public static AnnotationAndValue createAnnotationAndValue(AnnotationMirror annotationMirror) {
+        TypeName annoTypeName = createTypeNameFromMirror(annotationMirror.getAnnotationType()).orElseThrow();
+        return AnnotationAndValueDefault.create(annoTypeName, extractValues(annotationMirror.getElementValues()));
+    }
+
+    /**
      * Extracts values from the annotation mirror value.
      *
      * @param am       the annotation mirror
@@ -437,22 +710,27 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
 
     /**
      * Creates an instance of a {@link io.helidon.common.types.TypedElementName} given its type and variable element from
-     * annotation processing.
+     * annotation processing. If the passed in element is not a {@link TypeInfo#KIND_FIELD}, {@link TypeInfo#KIND_METHOD},
+     * {@link TypeInfo#KIND_CONSTRUCTOR}, or {@link TypeInfo#KIND_PARAMETER} then this method may return empty.
      *
      * @param v        the element (from annotation processing)
      * @param elements the elements
      * @return the created instance
      */
-    public static TypedElementName createTypedElementNameFromElement(Element v,
-                                                                     Elements elements) {
+    public static Optional<TypedElementName> createTypedElementNameFromElement(Element v,
+                                                                               Elements elements) {
         TypeName type = createTypeNameFromElement(v).orElse(null);
         List<TypeName> componentTypeNames = null;
         String defaultValue = null;
         List<AnnotationAndValue> elementTypeAnnotations = List.of();
         Set<String> modifierNames = Set.of();
+        List<TypedElementName> params = List.of();
         if (v instanceof ExecutableElement) {
             ExecutableElement ee = (ExecutableElement) v;
             TypeMirror returnType = ee.getReturnType();
+            if (type == null) {
+                type = createTypeNameFromMirror(returnType).orElse(createFromGenericDeclaration(returnType.toString()));
+            }
             if (returnType instanceof DeclaredType) {
                 List<? extends TypeMirror> args = ((DeclaredType) returnType).getTypeArguments();
                 componentTypeNames = args.stream()
@@ -475,6 +753,9 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
             modifierNames = ee.getModifiers().stream()
                     .map(Modifier::toString)
                     .collect(Collectors.toSet());
+            params = ee.getParameters().stream()
+                    .map(it -> createTypedElementNameFromElement(it, elements).orElseThrow())
+                    .collect(Collectors.toList());
         }
         componentTypeNames = (componentTypeNames == null) ? List.of() : componentTypeNames;
 
@@ -485,11 +766,12 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
                 .elementKind(v.getKind().name())
                 .annotations(createAnnotationAndValueListFromElement(v, elements))
                 .elementTypeAnnotations(elementTypeAnnotations)
-                .modifierNames(modifierNames);
-
+                .modifierNames(modifierNames)
+                .parameterArgumentss(params);
+        createTypeNameFromElement(v.getEnclosingElement()).ifPresent(builder::enclosingTypeName);
         Optional.ofNullable(defaultValue).ifPresent(builder::defaultValue);
 
-        return builder.build();
+        return Optional.of(builder.build());
     }
 
     /**
@@ -524,6 +806,16 @@ public class BuilderTypeTools implements TypeInfoCreatorProvider {
     public static String copyrightHeaderFor(String generatorClassTypeName) {
         return "// This is a generated file (powered by Helidon). "
                     + "Do not edit or extend from this artifact as it is subject to change at any time!";
+    }
+
+    /**
+     * Simple check to see the passed String value is non-null and non-blank.
+     *
+     * @param val the value to check
+     * @return true if non-null and non-blank
+     */
+    static boolean hasValue(String val) {
+        return (val != null && !val.isBlank());
     }
 
 }
